tests/cases/memory/errors/region-current-block-escape.ari
fn leak() -> std::string::String {
  region {
    return std::string::from("escape");
  }
}

fn main() -> i64 {
  let text = leak();
  return text.len();
}
